Archive2/d0/ab69f0ede65d58/output
main.cpp:18:5: error: constructor for 'B' must explicitly initialize the base class 'A' which does not have a default constructor
    B()
    ^
main.cpp:6:8: note: 'A' declared here
struct A
       ^
1 error generated.
